test/rewriter/errors/pat_too_many_record_field.expected
File "pat_too_many_record_field.ml", line 2, characters 14-49:
Error: ppx_yojson: record patterns with more than 4 fields aren't supported. Consider using ppx_deriving_yojson to handle more complex json objects.
